--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Vasilii Buraev",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Prince-Gizard/markdown-previewer.git",
+  "homepage": "https://prince-gizard.github.io/markdown-previewer/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
